Upgrade to Java 25, migrate visualization to JavaFX 3D, add CI